[metadata]
name = write_xls
version = 0.0.1
author = Shivnaren Srinivasan
author_email = shivnaren@gmail.com
description = Save XLS files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShivnarenSrinivasan/write_xls
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    pandas==1.5.1
    xlwt
python_requires = >=3.10
